--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1000">
+  <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;500;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/main.css">
-  <title>Document</title>
+  <title>CHOCCO</title>
 </head>
 <body>
   <div class="wrapper">
     <div class="maincontent">
       <section class="hero">
-        <div class="container">
+        <div class="container hero__container">
           <header class="header">
             <img src="./img/Лого.png" alt="choco logo" class="logo">
             <nav class="menu">
@@ -39,7 +41,10 @@
                 </li>
               </ul>
             </nav>
-            <a href="tel:+78009039090" class="phone__number">8 800 903 90 90</a>
+            <a href="tel:+78009039090" class="phone__number">
+              <span class="phone__icon"><img src="./img/icons/phone.png" alt="" class="phone__icon"></span>
+              <span class="phone__text">8 800 903 90 90</span>
+            </a>
           </header>
           <div class="hero__title-section">
             <h1 class="hero__main-title">натуральные шоколадные батончики</h1>
@@ -50,19 +55,19 @@
             <ul class="features">
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./img/icons/leaf.svg" alt="leaf icon">
+                  <img src="./img/icons/leaf.svg" alt="leaf icon" class="icon__leaf">
                 </div>
                 <div class="feature__text">100% натуральный продукт</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./img/icons/track.svg" alt="track icon">
+                  <img src="./img/icons/track.svg" alt="track icon" class="icon__leaf">
                 </div>
                 <div class="feature__text">3-5 дней доставка по РФ</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./img/icons/measure.svg" alt="measure icon">
+                  <img src="./img/icons/measure.svg" alt="measure icon" class="icon__leaf">
                 </div>
                 <div class="feature__text">Не портит фигуру</div>
               </li>
