разметка секции Почему

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section class="hero">
         <div class="container hero__container">
           <header class="header">
-            <img src="./img/Лого.png" alt="choco logo" class="logo">
+            <img src="./img/Лого.png" alt="choco logo" class="logo__img">
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
@@ -73,6 +73,56 @@
               </li>
             </ul>
           </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <div class="headline">
+            <h2 class="section__title headline__title">Почему chocco?</h2>
+            <div class="headline__subtitle">В нашем мире все происходит очень быстро, поэтому мыделаем батончики, которые удобно взять с собой.
+            </div>
+          </div>
+          <ul class="benefits">
+            <li class="benefits__item benefit">
+              <div class="benefit__image">
+                <div class="benefit__image-wrapper">
+                  <img src="./img/icons/human.png" alt="happy icon" class="benefit__icon">
+                </div>
+              </div>
+              <div class="benefit__text">
+                <h3 class="benefit__title">Полезно</h3>
+                <div class="benefit__desc">
+                  <p>Натуральность - ключевое качествонашей продукции. Мы используемтолько природные ингредиенты.</p>
+                </div>
+              </div>
+            </li>
+            <li class="benefits__item benefit">
+              <div class="benefit__image">
+                <div class="benefit__image-wrapper">
+                  <img src="./img/icons/smile.png" alt="smile icon" class="benefit__icon">
+                </div>
+              </div>
+              <div class="benefit__text">
+                <h3 class="benefit__title">Вкусно</h3>
+                <div class="benefit__desc">
+                  <p>Нежный, ненавязчивый, изысканный – так клиенты описывают вкусовые качества наших батончиков.</p>
+                </div>
+              </div>
+            </li>
+            <li class="benefits__item benefit">
+              <div class="benefit__image">
+                <div class="benefit__image-wrapper">
+                  <img src="./img/icons/muscles.png" alt="muscles icon" class="benefit__icon">
+                </div>
+              </div>
+              <div class="benefit__text">
+                <h3 class="benefit__title">Питательно</h3>
+                <div class="benefit__desc">
+                  <p>Высокое содержание качественного белка, а также всех необходимых витаминов и минералов.</p>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </div>
