--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section benefits-section">
         <div class="container">
           <div class="headline">
             <h2 class="section__title headline__title">Почему chocco?</h2>
-            <div class="headline__subtitle">В нашем мире все происходит очень быстро, поэтому мыделаем батончики, которые удобно взять с собой.
+            <div class="headline__subtitle">В нашем мире все происходит очень быстро, поэтому мы делаем батончики, которые удобно взять с собой.
             </div>
           </div>
           <ul class="benefits">
@@ -92,7 +92,7 @@
               <div class="benefit__text">
                 <h3 class="benefit__title">Полезно</h3>
                 <div class="benefit__desc">
-                  <p>Натуральность - ключевое качествонашей продукции. Мы используемтолько природные ингредиенты.</p>
+                  <p>Натуральность - ключевое качество нашей продукции. Мы используем только природные ингредиенты.</p>
                 </div>
               </div>
             </li>
@@ -125,6 +125,7 @@
           </ul>
         </div>
       </section>
+      <section class="section" style="height: 600px;"></section> тест
     </div>
   </div>
 </body>
