--- a/index.html
+++ b/index.html
@@ -125,7 +125,47 @@
           </ul>
         </div>
       </section>
-      <section class="section" style="height: 600px;"></section> тест
+      <section class="section reviews-section">
+        <div class="container">
+          <h2 class="section__title reviews-section__title">Отзывы</h2>
+          <div class="reviews">
+            <div class="reviews__display">
+              <div class="reviews__display__inner">
+                <div class="reviews__avatar">
+                  <img src="./img/reviews/avatar-1.png" alt="avatar" class="reviews-avatar-img">
+                </div>
+                <article class="reviews__content">
+                  <h3 class="reviews__title">Лучший перекус</h3>
+                  <div class="reviews__text">
+                    <p>
+                      Я ем малыми порциями, но часто. Это повышает мою продуктивность в разы. В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно. 
+                    </p>
+                  </div>
+                  <div class="reviews__author">Алёна Хмельницкая</div>
+                </article>
+              </div>
+            </div>
+            <ul class="reviews__switcher">
+              <li class="reviews__switcher-item interactive-avatar interactive-avatar--active">
+                <a href="#" class="interactive-avatar__link">
+                  <img src="./img/reviews/avatar-1.png" alt="avatar" class="interactive-avatar__img ">
+                </a>
+              </li>
+              <li class="reviews__switcher-item interactive-avatar">
+                <a href="#" class="interactive-avatar__link">
+                  <img src="./img/reviews/avatar-2.png" alt="avatar" class="interactive-avatar__img">
+                </a>
+              </li>
+              <li class="reviews__switcher-item interactive-avatar">
+                <a href="#" class="interactive-avatar__link">
+                  <img src="./img/reviews/avatar-3.png" alt="avatar" class="interactive-avatar__img">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section style="height: 650px; background: grey;"></section>
     </div>
   </div>
 </body>
