--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=1000">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;500;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/main.css">
@@ -15,7 +15,7 @@
       <section class="hero">
         <div class="container hero__container">
           <header class="header">
-            <img src="./img/Лого.png" alt="choco logo" class="logo__img">
+            <img src="./img/Лого.svg" alt="choco logo" class="logo__img">
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
@@ -41,9 +41,14 @@
                 </li>
               </ul>
             </nav>
-            <a href="tel:+78009039090" class="phone__number">
+            <a href="tel:+78009039090" class="phone-number header__phone-number">
               <span class="phone__icon"><img src="./img/icons/phone.png" alt="" class="phone__icon"></span>
               <span class="phone__text">8 800 903 90 90</span>
+            </a>
+            <a href="" class="hamburger">
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
             </a>
           </header>
           <div class="hero__title-section">
