--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
       <section class="hero">
         <div class="container hero__container">
           <header class="header">
-            <img src="./img/Лого.svg" alt="choco logo" class="logo__img">
+            <div class="header-logo">
+              <svg class="header-logo__icon">
+                <use xlink:href="./img/icons/sprite.svg#logo"></use>
+              </svg>
+            </div>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
@@ -42,7 +46,11 @@
               </ul>
             </nav>
             <a href="tel:+78009039090" class="phone-number header__phone-number">
-              <span class="phone__icon"><img src="./img/icons/phone.png" alt="" class="phone__icon"></span>
+              <span class="phone__icon">
+                <svg class="phone__icon">
+                  <use xlink:href="./img/icons/sprite.svg#phone"></use>
+                </svg>
+              </span>
               <span class="phone__text">8 800 903 90 90</span>
             </a>
             <a href="" class="hamburger">
@@ -60,19 +68,25 @@
             <ul class="features">
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./img/icons/leaf.svg" alt="leaf icon" class="icon__leaf">
+                  <svg class="icon__leaf">
+                    <use xlink:href="./img/icons/sprite.svg#bullet"></use>
+                  </svg>
                 </div>
                 <div class="feature__text">100% натуральный продукт</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./img/icons/track.svg" alt="track icon" class="icon__leaf">
+                  <svg class="icon__leaf">
+                    <use xlink:href="./img/icons/sprite.svg#car"></use>
+                  </svg>
                 </div>
                 <div class="feature__text">3-5 дней доставка по РФ</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./img/icons/measure.svg" alt="measure icon" class="icon__leaf">
+                  <svg class="icon__leaf">
+                    <use xlink:href="./img/icons/sprite.svg#belt"></use>
+                  </svg>
                 </div>
                 <div class="feature__text">Не портит фигуру</div>
               </li>
@@ -91,7 +105,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./img/icons/human.png" alt="happy icon" class="benefit__icon">
+                  <svg class="benefit__icon">
+                    <use xlink:href="./img/icons/sprite.svg#man"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -104,7 +120,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./img/icons/smile.png" alt="smile icon" class="benefit__icon">
+                  <svg class="benefit__icon">
+                    <use xlink:href="./img/icons/sprite.svg#smile"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -117,7 +135,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./img/icons/muscles.png" alt="muscles icon" class="benefit__icon">
+                  <svg class="benefit__icon">
+                    <use xlink:href="./img/icons/sprite.svg#arm"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -368,7 +388,7 @@
                 <svg class="phone__icon phone__icon--theme--green">
                   <use xlink:href="./img/icons/sprite.svg#phone"></use>
                 </svg>
-                88009039090
+                <span>8 800 903 90 90</span>
               </a>
             </div>
             <div class="socials">
@@ -412,40 +432,39 @@
       
     </div>
   </div>
-  <script type="html/template" id="fullscreenOverlayTemplate">
-    <div class="fullscreen-menu">
-      <a href="#" class="fullscreen-menu__close">
-        <svg class="fullscreen-menu__close-svg">
-          <use xlink:href="./img/icons/sprite.svg#close"></use>
-        </svg>
-      </a>
-      <nav class="menu menu--vertical">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">О нас</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Батончики</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Команда</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Меню</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Отзывы</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Как мы работаем</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </script>
+  <div class="fullscreen-menu">
+    <a href="#" class="fullscreen-menu__close">
+      <svg class="fullscreen-menu__close-svg">
+        <use xlink:href="./img/icons/sprite.svg#close"></use>
+      </svg>
+    </a>
+    <nav class="menu menu--vertical">
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a href="#" class="menu__link">О нас</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Батончики</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Команда</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Меню</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Отзывы</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Как мы работаем</a>
+        </li>
+        <li class="menu__item">
+          <a href="#" class="menu__link">Контакты</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  
   <nav class="fixed-menu">
     <ul class="fixed-menu__list">
       <li class="fixed-menu__item fixed-menu__item--active"> <a href="" class="fixed-menu__link"></a> </li>
