--- a/index.html
+++ b/index.html
@@ -267,35 +267,66 @@
         <div class="container">
           <h2 class="section__title reviews-section__title">Отзывы</h2>
           <div class="reviews">
-            <div class="reviews__display">
-              <div class="reviews__display__inner">
-                <div class="reviews__avatar">
-                  <img src="./img/reviews/avatar-1.png" alt="avatar" class="reviews-avatar-img">
-                </div>
-                <article class="reviews__content">
-                  <h3 class="reviews__title">Лучший перекус</h3>
-                  <div class="reviews__text">
-                    <p>
-                      Я ем малыми порциями, но часто. Это повышает мою продуктивность в разы. В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно. 
-                    </p>
+            <div class="reviews_display">
+              <ul class="reviews__list">
+                <li class="reviews__item reviews__item--active" data-linked-with="one">
+                  <div class="reviews__avatar">
+                    <img src="./img/reviews/avatar-1.png" alt="avatar" class="reviews-avatar-img">
                   </div>
-                  <div class="reviews__author">Алёна Хмельницкая</div>
-                </article>
-              </div>
+                  <article class="reviews__content">
+                    <h3 class="reviews__title">Лучший перекус</h3>
+                    <div class="reviews__text">
+                      <p>
+                        Я ем малыми порциями, но часто. Это повышает мою продуктивность в разы. В течение дня сижу за компьютером и часто отходить в кафе или на кухню просто не могу себе позволить. А батончик – он всегда под рукой. Это приятно и удобно. 
+                      </p>
+                    </div>
+                    <div class="reviews__author">Алёна Хмельницкая</div>
+                  </article>
+                </li>
+                <li class="reviews__item" data-linked-with="two">
+                  <div class="reviews__avatar">
+                    <img src="./img/reviews/avatar-2.png" alt="avatar" class="reviews-avatar-img">
+                  </div>
+                  <article class="reviews__content">
+                    <h3 class="reviews__title">Идеально подходят для спортсменов</h3>
+                    <div class="reviews__text">
+                      <p>
+                        После тренировок всегда хочется быстро закинуться чем-то белковым, потому что до дома ещё нужно доехать. А кушать хочется. Протеиновые батончики всегда выручают в этом плане. Спасибо производителю за этот качественный и экологичный продукт. 
+                      </p>
+                    </div>
+                    <div class="reviews__author">Вадим Грачев</div>
+                  </article>
+                </li>
+                <li class="reviews__item" data-linked-with="three">
+                  <div class="reviews__avatar">
+                    <img src="./img/reviews/avatar-3.png" alt="avatar" class="reviews-avatar-img">
+                  </div>
+                  <article class="reviews__content">
+                    <h3 class="reviews__title">Лучшие батончики премиум уровня</h3>
+                    <div class="reviews__text">
+                      <p>
+                        Батончики понравились. На мой взгляд слегка завышена цена по сравнению с конкурентами, однако, как говорится – оно того стоит. Нравится носить с собой, нравится держать в руке. Ну и конечно же, кушать. Идеально утоляют голод, хоть и не надолго. Через час уже ем ещё один. Но это скорее плюс, чем минус.
+                      </p>
+                    </div>
+                    <div class="reviews__author">Мария Орлова</div>
+                  </article>
+                </li>
+
+              </ul>
             </div>
-            <ul class="reviews__switcher">
-              <li class="reviews__switcher-item interactive-avatar interactive-avatar--active">
-                <a href="#" class="interactive-avatar__link">
+            <ul class="reviews_switcher">
+              <li class="reviews_switcher__item reviews_switcher__item--active">
+                <a href="#" class="reviews_switcher__link" data-open="one">
                   <img src="./img/reviews/avatar-1.png" alt="avatar" class="interactive-avatar__img ">
                 </a>
               </li>
-              <li class="reviews__switcher-item interactive-avatar">
-                <a href="#" class="interactive-avatar__link">
+              <li class="reviews_switcher__item">
+                <a href="#" class="reviews_switcher__link" data-open="two">
                   <img src="./img/reviews/avatar-2.png" alt="avatar" class="interactive-avatar__img">
                 </a>
               </li>
-              <li class="reviews__switcher-item interactive-avatar">
-                <a href="#" class="interactive-avatar__link">
+              <li class="reviews_switcher__item">
+                <a href="#" class="reviews_switcher__link" data-open="three">
                   <img src="./img/reviews/avatar-3.png" alt="avatar" class="interactive-avatar__img">
                 </a>
               </li>
@@ -479,6 +510,8 @@
     </ul>
   </nav>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <script src="./js/fullscreenMenu.js"></script>
+  <script src="./js/tabs.js"></script>
 </body>
 </html>
