реализован вертикалиный аккордеон jQuerry, работа слайдера bxSlider

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
   <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300;400;500;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/main.css">
@@ -259,8 +260,217 @@
                   </div>
                
               </li>
+              <li class="slider__item">
+                  <div class="product__col product__row">
+                    <img src="./img/tablets/product2.png" alt="" class="product__img">
+                  </div>
+                  <div class="product__col">
+                    <div class="compound">
+                      <a href="#" class="compound__link">
+                        <svg class="compound__img">
+                          <use xlink:href="./img/icons/sprite.svg#compound"></use>
+                        </svg>
+                        <span>состав</span>
+                      </a>
+                      <ul class="compound__list">
+                        <li class="compound__item">
+                          <div class="compound__col">
+                            <svg class="compound__icon">
+                              <use xlink:href="./img/icons/sprite.svg#oat" fill="black"></use>
+                            </svg>
+                            <div class="compound__desc">Овёс</div>
+                          </div>
+                          <div class="compound__col compound__weight">25г</div>
+                        </li>
+                        <li class="compound__item">
+                          <div class="compound__col">
+                            <svg class="compound__icon">
+                              <use xlink:href="./img/icons/sprite.svg#seaweed" fill="black"></use>
+                            </svg>
+                            <div class="compound__desc">Мор. водоросли</div>
+                          </div>
+                          <div class="compound__col compound__weight">15г</div>
+                        </li>
+                        <li class="compound__item">
+                          <div class="compound__col">
+                            <svg class="compound__icon">
+                              <use xlink:href="./img/icons/sprite.svg#almond" fill="black"></use>
+                            </svg>
+                            <div class="compound__desc">Миндаль</div>
+                          </div>
+                          <div class="compound__col compound__weight">20г</div>
+                        </li>
+                        <li class="compound__item">
+                          <div class="compound__col">
+                            <svg class="compound__icon">
+                              <use xlink:href="./img/icons/sprite.svg#milk" fill="black"></use>
+                            </svg>
+                            <div class="compound__desc">Сухое молоко</div>
+                          </div>
+                          <div class="compound__col compound__weight">10г</div>
+                        </li>
+                        <li class="compound__item">
+                          <div class="compound__col">
+                            <svg class="compound__icon">
+                              <use xlink:href="./img/icons/sprite.svg#seeds" fill="black"></use>
+                            </svg>
+                            <div class="compound__desc">Тыкв. семечки</div>
+                          </div>
+                          <div class="compound__col compound__weight">20г</div>
+                        </li>
+                        <li class="compound__item">
+                          <div class="compound__col">
+                            <svg class="compound__icon">
+                              <use xlink:href="./img/icons/sprite.svg#apitherapy" fill="black"></use>
+                            </svg>
+                            <div class="compound__desc">Зам. сахара</div>
+                          </div>
+                          <div class="compound__col compound__weight">4г</div>
+                        </li>
+                        <li class="compound__item">
+                          <div class="compound__col">
+                            <svg class="compound__icon">
+                              <use xlink:href="./img/icons/sprite.svg#beans" fill="black"></use>
+                            </svg>
+                            <div class="compound__desc">Какао бобы</div>
+                          </div>
+                          <div class="compound__col compound__weight">4г</div>
+                        </li>
+                      </ul>
+                    </div>
+                    <h2 class="section__title product__title">Батончик “Морские водоросли”</h2>
+                    <div class="product__desc">
+                      <div class="product__desc-text">
+                        <p>Гранола из морских водорослей с овсом, миндалем и тыквенными семечками. В состав также входят: сухое молоко, заменитель сахара и какао бобы.</p>
+                      </div>
+                      <ul class="product__list">
+                        <li class="product__item">
+                          <span>Калорийность</span>
+                          <span><b>120 ккал</b></span>
+                        </li>
+                        <li class="product__item">
+                          <span>Вес</span>
+                          <span><b>98 грамм</b></span>
+                        </li>
+                      </ul>
+                      <div class="product__order">
+                        <div class="product__price">140 ₽</div>
+                        <a href="#" class="btn btn--theme--bright-green">заказать</a>
+                      </div>
+                    </div>
+
+                  </div>
+               
+              </li>
             </ul>
           </div>
+        </div>
+      </section>
+      <section class="section team-section">
+        <div class="container">
+          <h2 class="section__title team-section__title">Команда</h2>
+          <!--------Desktop-------------->
+          <ul class="team__list team__list--version--desktop">
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/team-1.png" alt="photo" class="team__img">
+              </div>
+              <a href="#" class="team__title">Борис Федорович</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <h5 class="team__position">Главный технолог</h5>
+                  <div class="team__content-text"><p>Отвечает за вкусовые качества и калорийность.</p></div>              
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/team-2.png" alt="photo" class="team__img">
+              </div>
+              <a href="#" class="team__title">Алла Иванова</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <h5 class="team__position">Специалист по упаковке</h5>
+                  <div class="team__content-text"><p>Автор запоминающегося стиля наших батончиков.</p></div>           
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/team-3.png" alt="photo" class="team__img">
+              </div>
+              <a href="#" class="team__title">Кирилл Матросов</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <h5 class="team__position">Оператор</h5>
+                  <div class="team__content-text"><p>С радостью поможет подобрать батончики и оформить заказ.</p></div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./img/team/team-4.png" alt="photo" class="team__img">
+              </div>
+              <a href="#" class="team__title">Мила Рыжкова</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <h5 class="team__position">PR, маркетинг</h5>
+                  <div class="team__content-text"><p>По всем вопросам сотрудничества и рекламы писать только Миле.</p></div>                        
+                </div>
+              </div>
+            </li>
+          </ul>
+          <!--------Mobile------------------->
+          <ul class="team__list team__list--version--mobile">
+            <li class="team__item">             
+              <a href="#" class="team__title">Борис Федорович</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/team-1.png" alt="photo" class="team__img">
+                  </div>
+                  <h5 class="team__position">Главный технолог</h5>
+                  <div class="team__content-text"><p>Отвечает за вкусовые качества и калорийность.</p></div>              
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__title">Алла Иванова</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/team-2.png" alt="photo" class="team__img">
+                  </div>
+                  <h5 class="team__position">Специалист по упаковке</h5>
+                  <div class="team__content-text"><p>Автор запоминающегося стиля наших батончиков.</p></div>           
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__title">Кирилл Матросов</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/team-3.png" alt="photo" class="team__img">
+                  </div>
+                  <h5 class="team__position">Оператор</h5>
+                  <div class="team__content-text"><p>С радостью поможет подобрать батончики и оформить заказ.</p></div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <a href="#" class="team__title">Мила Рыжкова</a>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./img/team/team-4.png" alt="photo" class="team__img">
+                  </div>
+                  <h5 class="team__position">PR, маркетинг</h5>
+                  <div class="team__content-text"><p>По всем вопросам сотрудничества и рекламы писать только Миле.</p></div>                        
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="section reviews-section">
@@ -314,6 +524,11 @@
 
               </ul>
             </div>
+            <ul class="reviews-autor-mobile__list">
+              <li class="reviews__author autor-mobile reviews__author--active" data-author="one">Алёна Хмельницкая</li>
+              <li class="reviews__author autor-mobile" data-author="two">Вадим Грачев</li>
+              <li class="reviews__author autor-mobile" data-author="three">Мария Орлова</li>
+            </ul>
             <ul class="reviews_switcher">
               <li class="reviews_switcher__item reviews_switcher__item--active">
                 <a href="#" class="reviews_switcher__link" data-open="one">
@@ -511,7 +726,10 @@
   </nav>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
   <script src="./js/fullscreenMenu.js"></script>
   <script src="./js/tabs.js"></script>
+  <script src="./js/team.js"></script>
+  <script src="./js/slider.js"></script>
 </body>
 </html>
